Upgrade Java21, GraalVM, SpringBoot