@@ -1,12 +1,29 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.6'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'com.google.cloud.tools.jib' version '3.3.1'
+    id 'org.springframework.boot' version '3.1.5'
+    id 'io.spring.dependency-management' version '1.1.3'
+    //id 'com.google.cloud.tools.jib' version '3.3.1'
+    id 'org.graalvm.buildtools.native' version '0.9.28'
+}
+
+java {
+    sourceCompatibility = '21'
+}
+
+graalvmNative {
+    binaries {
+        main {
+            buildArgs.add('--enable-preview')
+        }
+    }
+}
+
+java {
+    toolchain { languageVersion = JavaLanguageVersion.of(21) }
 }
 
 
-/* https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin#example */
+/* https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin#example
 jib {
 
     to {
@@ -24,7 +41,7 @@ jib {
 
 
     }
-}
+} */
 
 group 'com.oom.temporal'
 version '0.0.5'
@@ -34,7 +51,7 @@ repositories {
 }
 ext{
     temporalVersion = '1.19.1'
-    lombokVersion = '1.18.26'
+    lombokVersion = '1.18.30'
 }
 
 
